[package]
name = "twitter-exporter"
version = "0.1.0"
authors = ["sksat <sksat@sksat.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg-mode = "0.15.0"
env_logger = "0.9.0"
hyper = "0.13"
job_scheduler = "1.2.1"
lazy_static = "1.4.0"
log = "0.4.14"
prometheus = "0.11.0"
serde = "1.0.125"
serde_derive = "1.0.123"
tokio = { version="0.2.8", features=["full"] }
toml = "0.5.8"
